--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>自己紹介</title>
 
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="sub-cover cover-contact">
@@ -51,6 +51,6 @@
             </ul>
         </footer>
     </div>
- <script src="aaa.js"></script>
+ <script src="js/scripts.js"></script>
 </body>
 </html>
