--- a/artist.html
+++ b/artist.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
     
-    <link rel="stylesheet" href="artist.css">
-    <link rel="stylesheet" href="aaa.css">
+    <link rel="stylesheet" href="css/artist.css">
+    <link rel="stylesheet" href="css/test.css">
     
 </head>
 <body>
@@ -396,6 +396,6 @@
         </footer>
     </div>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-<script src="aaa.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
