--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 </head>
 <body>
     <div class="sub-cover cover-contact">
-        <header class="page-header ">
-            <h1 class="align-center">
-                <a href="index.html"><img class="logo" src="images/logo.svg" alt="田村優典"></a>
-            </h1>
-            <nav>
-                <ul class="main-nav">
-                    <li><a href="career.html">career</a></li>
-                    <li><a href="menu.html">hood</a></li>
-                    <li><a href="contact.html">aaa</a></li>
+        <header class="page-header">
+            <h1 class="main-h1"><a class="main-self" href="index.html">self-introduction</a></h1>
+            <nav class="main-nav">
+                <ul class="head-main-nav">
+                    <li class="nav-li"><a href="career.html">CAREER</a></li>
+                    <li class="nav-li"><a href="hood.html">MYHOOD</a></li>
+                    <li class="nav-li"><a href="qa.html">Q&A</a></li>
+                    <li class="nav-li"><a href="sns.html">SNS</a></li>
+                    <li class="nav-li"><a href="aaaa.html">aaaa</a></li>
                 </ul>
             </nav>
         </header>
     </div>
 
-
+    <h2 class="hobby-h2">hobby</h2>
     <div class="imgs">
         <div class="">
            <a href="artist.html"><img class="imgone" src="image/1000_F_203627018_tAISYB79MMOfapcEBqSjKbH2Ary2XLIH.jpg" alt=""></a> 
