--- a/index.html
+++ b/index.html
@@ -24,18 +24,22 @@
         </header>
     </div>
 
-    <h2 class="hobby-h2">hobby</h2>
+    <h2 class="hobby-h2">my faivolit things</h2>
     <div class="imgs">
         <div class="">
-           <a href="artist.html"><img class="imgone" src="image/1000_F_203627018_tAISYB79MMOfapcEBqSjKbH2Ary2XLIH.jpg" alt=""></a> 
-            <h2>好きなアーティスト</h2>
+           <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a> 
+            <h2>music</h2>
         </div>
         <div>
-            <img class="imgone" src="image/1000_F_203627018_tAISYB79MMOfapcEBqSjKbH2Ary2XLIH.jpg" alt="">
-            <h2>好きな音楽</h2>
+            <img class="imgone" src="image/index/food.jpg" alt="">
+            <h2>food</h2>
         </div>
         <div>
-            <img class="imgone" src="image/1000_F_203627018_tAISYB79MMOfapcEBqSjKbH2Ary2XLIH.jpg" alt="">
+            <img class="imgone" src="image/index/movie.jpg" alt="">
+            <h2>movie</h2>
+        </div>
+        <div>
+            <img class="imgone" src="image/index/hobby.jpg" alt="">
             <h2>趣味</h2>
         </div>
     </div>
