--- a/artist.html
+++ b/artist.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
     
     <link rel="stylesheet" href="css/artist.css">
-    <link rel="stylesheet" href="css/test.css">
+    <link rel="stylesheet" href="css/artistjs.css">
     
 </head>
 <body>
