--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
+    
 </head>
 <body>
     <div class="sub-cover cover-contact">
@@ -28,26 +29,46 @@
     <h2 class="hobby-h2">my faivolit things</h2>
     <div class="swiper">
         <div class="imgs swiper-wrapper">
-            <div class="">
-               <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a> 
-                <h2>music</h2>
+            <div class="swiper-slide">
+               <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
+               <h2>music</h2> 
             </div>
             <div class="swiper-slide">
-                <img class="imgone" src="image/index/food.jpg" alt="">
-                <h2>food</h2>
-            </div>
-            <div class="swiper-slide">
-                <img class="imgone" src="image/index/movie.jpg" alt="">
-                <h2>movie</h2>
-            </div>
-            <div class="swiper-slide">
-                <img class="imgone" src="image/index/hobby.jpg" alt="">
-                <h2>skateboard</h2>
-            </div>
-            <div class="swiper-slide">
-                <img class="imgone" src="image/index/hobby.jpg" alt="">
-                <h2>skateboard</h2>
-            </div>
+                <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
+                <h2>music</h2> 
+             </div>
+             <div class="swiper-slide">
+                <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
+                <h2>music</h2> 
+             </div>
+             <div class="swiper-slide">
+                <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
+                <h2>music</h2> 
+             </div>
+             <div class="swiper-slide">
+                <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
+                <h2>music</h2> 
+             </div>
+             <div class="swiper-slide">
+                <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
+                <h2>music</h2> 
+             </div>
+             <div class="swiper-slide">
+                <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
+                <h2>music</h2> 
+             </div>
+             <div class="swiper-slide">
+                <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
+                <h2>music</h2> 
+             </div>
+             <div class="swiper-slide">
+                <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
+                <h2>music</h2> 
+             </div>
+             <div class="swiper-slide">
+                <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
+                <h2>music</h2> 
+             </div>
         </div>
         <div class="swiper-pagination"></div>
         <div class="swiper-button-prev"></div>
@@ -67,6 +88,6 @@
         </footer>
     </div>
  <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
- <script src="js/test.js"></script>
+ <script src="js/test2.js"></script>
 </body>
 </html>
