--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/test.css">
     
 </head>
 <body>
@@ -26,51 +26,40 @@
         </header>
     </div>
 
-    <h2 class="hobby-h2">my faivolit things</h2>
+
+
+    <h2>yuusuke</h2>
+    <img src="image/1000_F_203627018_tAISYB79MMOfapcEBqSjKbH2Ary2XLIH.jpg" alt="">
+
+    <h2 class="myf">my favorite things</h2>
     <div class="swiper">
         <div class="imgs swiper-wrapper">
             <div class="swiper-slide">
-               <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
-               <h2>music</h2> 
-            </div>
+                <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""> </a>
+                <h2 class="hobby-h2">music</h2>
+             </div>
             <div class="swiper-slide">
-                <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
-                <h2>music</h2> 
+                <a href=""><img class="imgone" src="image/index/food.jpg" alt=""> </a>
+                <h2 class="hobby-h2" >food</h2>
              </div>
              <div class="swiper-slide">
-                <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
-                <h2>music</h2> 
+                <a href=""><img class="imgone" src="image/index/movie.jpg" alt=""> </a>
+                <h2 class="hobby-h2">movie</h2>
              </div>
              <div class="swiper-slide">
-                <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
-                <h2>music</h2> 
+                <a href=""><img class="imgone" src="image/index/hobby.jpg" alt=""> </a>
+                <h2 class="hobby-h2">skatborad</h2>
              </div>
              <div class="swiper-slide">
-                <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
-                <h2>music</h2> 
+                <a href=""><img class="imgone" src="image/index/music.jpg" alt=""> </a>
              </div>
              <div class="swiper-slide">
-                <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
-                <h2>music</h2> 
+                <a href=""><img class="imgone" src="image/index/music.jpg" alt=""> </a>
              </div>
              <div class="swiper-slide">
-                <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
-                <h2>music</h2> 
-             </div>
-             <div class="swiper-slide">
-                <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
-                <h2>music</h2> 
-             </div>
-             <div class="swiper-slide">
-                <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
-                <h2>music</h2> 
-             </div>
-             <div class="swiper-slide">
-                <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
-                <h2>music</h2> 
+                <a href=""><img class="imgone" src="image/index/music.jpg" alt=""> </a>
              </div>
         </div>
-        <div class="swiper-pagination"></div>
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
     </div>
@@ -81,9 +70,9 @@
     <div class="footer-div">
         <footer class="footer">
             <ul class="footer-ul">
-                <li><a href=""><img class="insta-img" src="image/Instagram_icon.png.webp" alt=""></a></li>
-                <li><a href=""><img class="line-img" src="image/linelogo.png" alt=""></a></li>
-                <li><a href=""><img class="x-img" src="image/twitter-x-logo-png-9.png" alt=""></a></li>
+                <li><a href=""><img class="insta-img" src="image/image/insta.png" alt=""></a></li>
+                <li><a href=""><img class="line-img" src="image/image/insta.png" alt=""></a></li>
+                <li><a href=""><img class="x-img" src="image/image/insta.png" alt=""></a></li>
             </ul>
         </footer>
     </div>
