--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
     <h2>yuusuke</h2>
-    <img src="image/1000_F_203627018_tAISYB79MMOfapcEBqSjKbH2Ary2XLIH.jpg" alt="">
+    <img class="main-img" src="image/1000_F_203627018_tAISYB79MMOfapcEBqSjKbH2Ary2XLIH.jpg" alt="">
 
     <h2 class="myf">my favorite things</h2>
     <div class="swiper">
