--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <h2>yuusuke</h2>
     <img class="main-img" src="image/1000_F_203627018_tAISYB79MMOfapcEBqSjKbH2Ary2XLIH.jpg" alt="">
-
+<div class="main-hobby">
     <h2 class="myf">my favorite things</h2>
     <div class="swiper">
         <div class="imgs swiper-wrapper">
@@ -64,17 +64,9 @@
         <div class="swiper-button-next"></div>
     </div>
 
-    <p>a</p>
+</div>
     
-    <p>a</p>
-    <p>a</p>
-    <p>a</p>
-    <p>a</p>
-    <p>a</p>
-    <p>a</p>
-    <p>a</p>
-    <p>a</p>
-    <p>a</p>
+    <img src="image/k/big-naughty.jpg" alt="">
 
 
 <footer class="footer">
