--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <li class="nav-li"><a href="aaaa.html">aaaa</a></li>
                 </ul>
             </nav>
+            <h2>田村ユスけ</h2>
         </header>
     </div>
 
@@ -50,23 +51,25 @@
                 </div>
                 <div class="swiper-slide">
                     <a href=""><img class="imgone" src="image/index/music.jpg" alt=""> </a>
+                    <h2>soccer</h2>
                 </div>
                 <div class="swiper-slide">
                     <a href=""><img class="imgone" src="image/index/music.jpg" alt=""> </a>
+                    <h2 class="hobby-h2">study</h2>
                 </div>
-                <div class="swiper-slide">
+                 <div class="swiper-slide">
                      <a href=""><img class="imgone" src="image/index/music.jpg" alt=""> </a>
+                     <h2 class="hobby-h2">youtube</h2>
                 </div>
             </div>
-        </div>
-
+        
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
-
+    </div>
     </div>
 
 
-    <div class="about">
+    <div class="about">  s
     <h2>about</h2>
     <p>あいうえお</p>
     <p>かきくけこ</p>
