--- a/artist.html
+++ b/artist.html
@@ -13,7 +13,25 @@
     <link rel="stylesheet" href="css/artistjs.css">
     
 </head>
+
 <body>
+    <div class="sub-cover cover-contact">
+        <header class="page-header">
+            <nav class="main-nav">
+                <ul class="head-main-nav">
+                    <h1 class="nav-h1"><a href="index.html"><img class="nav-img" src="image/image/pngwing.comのコピー.png" alt=""></a></h1>
+                    <li class="nav-li"><a style="text-decoration: none;" href="career.html">CAREER</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="hood.html">MYHOOD</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="qa.html">Q&A</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="sns.html">SNS</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="aaaa.html">aaaa</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
+
+
+
     <div class="swiper">
         <div class="swiper-wrapper">
               <div class="swiper-slide">
@@ -1382,15 +1400,13 @@
     </div>
 
 
-    <div class="footer-div">
-        <footer class="footer">
-            <ul class="footer-ul">
-                <li><a href=""><img class="insta-img" src="image/Instagram_icon.png.webp" alt=""></a></li>
-                <li><a href=""><img class="line-img" src="image/linelogo.png" alt=""></a></li>
-                <li><a href=""><img class="x-img" src="image/twitter-x-logo-png-9.png" alt=""></a></li>
-            </ul>
-        </footer>
-    </div>
+    <footer class="footer">
+        <ul class="footer-ul">
+            <li><a href=""><img class="insta-img" src="image/image/insta.png" alt=""></a></li>
+            <li><a href=""><img class="line-img" src="image/image/insta.png" alt=""></a></li>
+            <li><a href=""><img class="x-img" src="image/image/insta.png" alt=""></a></li>
+        </ul>
+    </footer>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 <script src="js/scripts.js"></script>
 </body>
