--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
 <body class="main-hobby">
     <div class="sub-cover cover-contact">
         <header class="page-header">
-            <h1 class="main-h1"><a class="main-self" href="index.html">self-introduction</a></h1>
+            
             <nav class="main-nav">
                 <ul class="head-main-nav">
-                    <li class="nav-li"><a href="career.html">CAREER</a></li>
-                    <li class="nav-li"><a href="hood.html">MYHOOD</a></li>
-                    <li class="nav-li"><a href="qa.html">Q&A</a></li>
-                    <li class="nav-li"><a href="sns.html">SNS</a></li>
-                    <li class="nav-li"><a href="aaaa.html">aaaa</a></li>
+                    <h1 class="nav-h1"><a href="index.html"><img class="nav-img" src="image/image/pngwing.comのコピー.png" alt=""></a></h1>
+                    <li class="nav-li"><a style="text-decoration: none;" href="career.html">CAREER</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="hood.html">MYHOOD</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="qa.html">Q&A</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="sns.html">SNS</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="aaaa.html">aaaa</a></li>
                 </ul>
             </nav>
             <p class="eachTextAnime">
                 self-introduction-site <br>  
                 Yuusuke/Tamura
             </p>
-            <div class="box"><img  src="image/image/pngwing.com (2).png" alt=""></div>
-           
+            <div class="box"><img class="e"  src="image/image/pngwing.com (2).png" alt=""></div>
         </header>
     </div>
 
