--- a/artist.html
+++ b/artist.html
@@ -20,7 +20,7 @@
             <nav class="main-nav">
                 <ul class="head-main-nav">
                     <h1 class="nav-h1"><a href="index.html"><img class="nav-img" src="image/image/pngwing.comのコピー.png" alt=""></a></h1>
-                    <li class="nav-li"><a style="text-decoration: none;" href="career.html">CAREER</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;" href="#swiper">CAREER</a></li>
                     <li class="nav-li"><a style="text-decoration: none;"  href="hood.html">MYHOOD</a></li>
                     <li class="nav-li"><a style="text-decoration: none;"  href="qa.html">Q&A</a></li>
                     <li class="nav-li"><a style="text-decoration: none;"  href="sns.html">SNS</a></li>
