--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <nav class="main-nav">
                 <ul class="head-main-nav">
                     <h1 class="nav-h1"><a href="index.html"><img class="nav-img" src="image/image/pngwing.comのコピー.png" alt=""></a></h1>
-                    <li class="nav-li"><a style="text-decoration: none;" href="career.html">CAREER</a></li>
-                    <li class="nav-li"><a style="text-decoration: none;"  href="hood.html">MYHOOD</a></li>
-                    <li class="nav-li"><a style="text-decoration: none;"  href="qa.html">Q&A</a></li>
-                    <li class="nav-li"><a style="text-decoration: none;"  href="sns.html">SNS</a></li>
-                    <li class="nav-li"><a style="text-decoration: none;"  href="aaaa.html">aaaa</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;" href="#like">my favorite</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="hood.html">myhood</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="qa.html">q&a</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="sns.html">sns</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="aaaa.html">career</a></li>
                 </ul>
             </nav>
             <p class="eachTextAnime">
@@ -37,7 +37,7 @@
 
     
     
-    <div class="like">
+    <div id="like" class="like">
         <h2 class="myf">my favorite things</h2>
         <div class="swiper">
             <div class="imgs swiper-wrapper">
