--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
+
     <title>自己紹介</title>
 
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
@@ -59,7 +62,7 @@
                 </div>
                 <div class="swiper-slide">
                     <a href=""><img class="imgone" src="image/index/music.jpg" alt=""> </a>
-                    <h2>soccer</h2>
+                    <h2 class="hobby-h2">soccer</h2>
                 </div>
                 <div class="swiper-slide">
                     <a href=""><img class="imgone" src="image/index/music.jpg" alt=""> </a>
