--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             
             <nav class="main-nav">
                 <ul class="head-main-nav">
-                    <h1 class="nav-h1"><a href="index.html"><img class="nav-img" src="image/image/pngwing.comのコピー.png" alt=""></a></h1>
+                    <h1 class="nav-h1"><a href="index.html"><img class="nav-img" src="image/image/pngwing.comのコピー.png" alt=""></a></h1>
                     <li class="nav-li"><a style="text-decoration: none;" href="#like">my favorite</a></li>
                     <li class="nav-li"><a style="text-decoration: none;"  href="hood.html">myhood</a></li>
                     <li class="nav-li"><a style="text-decoration: none;"  href="qa.html">q&a</a></li>
@@ -79,22 +79,13 @@
     </div>
     </div>
 
-
-    <div class="about">  s
-    <h2>about</h2>
-    <p>あいうえお</p>
-    <p>かきくけこ</p>
-    <p>あいうえお</p>
-    <p>かきくけこ</p>
-    <p>あいうえお</p>
-    <p>かきくけこ</p>
-    <p>あいうえお</p>
-    <p>かきくけこ</p>
-    <p>あいうえお</p>
-    <p>かきくけこ</p>
-    <p>あいうえお</p>
-    <p>かきくけこ</p>
+    <div class="about">
+        <h2 class="about-h2">career</h2>
+        <div class="about-div">  
+            <p class="about-p">滋賀県出身、滋賀県育ち<br>八幡西中学校卒業 <br> 近江高校卒業 <br> 京都医健専門学校中退 <br> 京都デザイン＆テクノロジー専門学校入学</p>
+        </div>
     </div>
+    
 
 
 
