--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li class="nav-li"><a style="text-decoration: none;"  href="hood.html">myhood</a></li>
                     <li class="nav-li"><a style="text-decoration: none;"  href="qa.html">q&a</a></li>
                     <li class="nav-li"><a style="text-decoration: none;"  href="sns.html">sns</a></li>
-                    <li class="nav-li"><a style="text-decoration: none;"  href="aaaa.html">career</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="#career">career</a></li>
                 </ul>
             </nav>
             <p class="eachTextAnime">
@@ -85,6 +85,29 @@
             <p class="about-p">滋賀県出身、滋賀県育ち<br>八幡西中学校卒業 <br> 近江高校卒業 <br> 京都医健専門学校中退 <br> 京都デザイン＆テクノロジー専門学校入学</p>
         </div>
     </div>
+
+    <div class="about">
+        <h2 class="about-h2">career</h2>
+        <div class="about-div">  
+            <p class="about-p">滋賀県出身、滋賀県育ち<br>八幡西中学校卒業 <br> 近江高校卒業 <br> 京都医健専門学校中退 <br> 京都デザイン＆テクノロジー専門学校入学</p>
+        </div>
+    </div>
+
+
+    <div class="about">
+        <h2 class="about-h2">career</h2>
+        <div class="about-div">  
+            <p class="about-p">滋賀県出身、滋賀県育ち<br>八幡西中学校卒業 <br> 近江高校卒業 <br> 京都医健専門学校中退 <br> 京都デザイン＆テクノロジー専門学校入学</p>
+        </div>
+    </div>
+
+
+    <div id="career" class="about">
+        <h2 class="about-h2">career</h2>
+        <div class="about-div">  
+            <p class="about-p">滋賀県出身、滋賀県育ち<br>八幡西中学校卒業 <br> 近江高校卒業 <br> 京都医健専門学校中退 <br> 京都デザイン＆テクノロジー専門学校入学</p>
+        </div>
+    </div>
     
 
 
@@ -95,11 +118,15 @@
 
 
 <footer class="footer">
+    <div class="footer-div">
+        <p class="footer-p">666</p>
     <ul class="footer-ul">
         <li><a href=""><img class="insta-img" src="image/image/insta.png" alt=""></a></li>
         <li><a href=""><img class="line-img" src="image/image/insta.png" alt=""></a></li>
         <li><a href=""><img class="x-img" src="image/image/insta.png" alt=""></a></li>
     </ul>
+    </div>
+    
 </footer>
   
    
