--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
     </div>
 
     <div class="about">
-        <h2 class="about-h2">career</h2>
+        <h2 class="about-h2">my hood</h2>
         <div class="about-div">  
-            <p class="about-p">滋賀県出身、滋賀県育ち<br>八幡西中学校卒業 <br> 近江高校卒業 <br> 京都医健専門学校中退 <br> 京都デザイン＆テクノロジー専門学校入学</p>
+            <p class="about-p">滋賀県出身<br>滋賀県育ち<br> <br> <br> </p>
+            <img src="image/image/nihonchizu.png" alt=""><!------地元の風景スライだ-->
+            <a href=""><p>ditail</p></a>
         </div>
     </div>
 
@@ -90,6 +92,7 @@
         <h2 class="about-h2">career</h2>
         <div class="about-div">  
             <p class="about-p">滋賀県出身、滋賀県育ち<br>八幡西中学校卒業 <br> 近江高校卒業 <br> 京都医健専門学校中退 <br> 京都デザイン＆テクノロジー専門学校入学</p>
+            <a href=""><p>ditail</p></a>
         </div>
     </div>
 
@@ -103,7 +106,7 @@
 
 
     <div id="career" class="about">
-        <h2 class="about-h2">career</h2>
+        <h2 class="about-h2">Q&A</h2>
         <div class="about-div">  
             <p class="about-p">滋賀県出身、滋賀県育ち<br>八幡西中学校卒業 <br> 近江高校卒業 <br> 京都医健専門学校中退 <br> 京都デザイン＆テクノロジー専門学校入学</p>
         </div>
