--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 
 
-    <div class="about about-line">
+    <div class="about about-line about-hood">
        <h2 class="hood-h2">my hood</h2>
     <div class="about-div ">  
         <div class="swiper swiper2">
