--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <ul class="head-main-nav">
                     <h1 class="nav-h1"><a href="index.html"><img class="nav-img" src="image/image/pngwing.comのコピー.png" alt=""></a></h1>
                     <li class="nav-li"><a style="text-decoration: none;" href="#like">my favorite</a></li>
-                    <li class="nav-li"><a style="text-decoration: none;"  href="hood.html">myhood</a></li>
-                    <li class="nav-li"><a style="text-decoration: none;"  href="qa.html">q&a</a></li>
-                    <li class="nav-li"><a style="text-decoration: none;"  href="sns.html">sns</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="#hood">myhood</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="#q&a">q&a</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="#sns">sns</a></li>
                     <li class="nav-li"><a style="text-decoration: none;"  href="#career">career</a></li>
                 </ul>
             </nav>
@@ -50,11 +50,11 @@
                         <h2 class="hobby-h2">Music</h2>
                     </div>
                     <div class="swiper-slide">
-                        <a href=""><img class="imgone" src="image/like/food2.jpg" alt=""></a>
+                        <a href="food.html"><img class="imgone" src="image/like/food2.jpg" alt=""></a>
                         <h2 class="hobby-h2">Food</h2>
                     </div>
                     <div class="swiper-slide">
-                        <a href=""><img class="imgone" src="image/like/movie.jpg" alt=""></a>
+                        <a href="movie.html"><img class="imgone" src="image/like/movie.jpg" alt=""></a>
                         <h2 class="hobby-h2">Movie</h2>
                     </div>
                     <div class="swiper-slide">
@@ -64,14 +64,6 @@
                     <div class="swiper-slide">
                         <a href="soccer.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
                         <h2 class="hobby-h2">Soccer</h2>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href=""><img class="imgone" src="image/index/music.jpg" alt=""></a>
-                        <h2 class="hobby-h2">Study</h2>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href=""><img class="imgone" src="image/index/music.jpg" alt=""></a>
-                        <h2 class="hobby-h2">YouTube</h2>
                     </div>
                 </div>
         
@@ -84,7 +76,7 @@
 
 
 
-    <div class="about about-line about-hood">
+    <div id="hood" class="about about-line about-hood">
        <h2 class="hood-h2">my hood</h2>
     <div class="about-div ">  
         <div class="swiper swiper2">
@@ -103,7 +95,7 @@
     </div>
     
 
-    <div class="about about-line">
+    <div id="career" class="about about-line">
         <h2 class="about-h2">career</h2>
         <div class="about-div">  
             <p class="about-p">滋賀県出身<br> 近江高校卒業 <br> 京都医健専門学校中退 <br> 京都TECH入学</p>
@@ -112,15 +104,24 @@
     </div>
 
 
-    <div class="about about-line">
-        <h2 class="about-h2">career</h2>
-        <div class="about-div">  
-            <p class="about-p">滋賀県出身<br> 近江高校卒業 <br> 京都医健専門学校中退 <br> 京都TECH入学</p>
+    <div id="sns" class="about about-line">
+        <h2 class="sns-h2">SNS</h2>
+        <div class="index-sns-imgs ">  
+            <div class="index-sns-imgs-row">
+                <img class="index-sns-img" src="image/index/sns/instagram.png" alt="">
+                <img class="index-sns-x" src="image/index/sns/x.png" alt="">
+                <img class="index-sns-img" src="image/index/sns/bereal.png" alt="">
+            </div>
+            <div class="index-sns-imgs-row">
+                <img class="index-sns-img" src="image/index/sns/applem.png" alt="">
+                <img class="index-sns-img" src="image/index/sns/sound.png" alt="">
+                <img class="index-sns-img" src="image/index/sns/m.png" alt="">
+            </div>
         </div>
     </div>
 
 
-    <div id="career" class="about">
+    <div id="q&a" class="">
         <h2 class="about-h2">Q&A</h2>
         <div class="about-div">
             <form class="qa-form">      
