--- a/food.html
+++ b/food.html
@@ -7,16 +7,25 @@
     <link rel="stylesheet" href="css/food.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-WIe1FSYOeE/22RPP6VZEZ41B4B9vN8LeHU/9L6Qr2wPfO1x9+dG/v2rc52ex5SPmSKsSCGj4nBYOQXjGKj4R4Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-    <header>
-        <div class="header-content">
-            <h1>宇宙の魔法の料理</h1>
-            <p>星々からやってきた奇跡の料理をお楽しみください。</p>
-        </div>
-    </header>
+<body class="main-hobby">
+
+    <div class="sub-cover cover-contact">
+        <header class="page-header">
+            <nav class="main-nav">
+                <ul class="head-main-nav">
+                    <h1 class="nav-h1"><a href="index.html"><img class="nav-img" src="image/image/pngwing.comのコピー.png" alt=""></a></h1>
+                    <li class="nav-li"><a style="text-decoration: none;" href="#like">my favorite</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="hood.html">myhood</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="qa.html">q&a</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="sns.html">sns</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="aaaa.html">career</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
     <div class="container">
         <div class="card" data-food="星雲のスープ">
-            <img src="nebula_soup.jpg" alt="星雲のスープ">
+            <img src="image/food/ab.jpeg" alt="星雲のスープ">
             <div class="card-content">
                 <h3>星雲のスープ</h3>
                 <p>彩り鮮やかな星雲をイメージした、宇宙的なスープ。</p>
@@ -24,7 +33,7 @@
             </div>
         </div>
         <div class="card" data-food="アストロベリーパフェ">
-            <img src="astro_berry_parfait.jpg" alt="アストロベリーパフェ">
+            <img src="image/food/hb.jpeg" alt="アストロベリーパフェ">
             <div class="card-content">
                 <h3>アストロベリーパフェ</h3>
                 <p>宇宙の果実、アストロベリーをふんだんに使った宇宙船の形をしたパフェ。</p>
@@ -32,7 +41,7 @@
             </div>
         </div>
         <div class="card" data-food="火星のグリル">
-            <img src="mars_grill.jpg" alt="火星のグリル">
+            <img src="image/food/re.png" alt="火星のグリル">
             <div class="card-content">
                 <h3>火星のグリル</h3>
                 <p>火星の赤い大地から採れた特別なスパイスを使ったグリル料理。</p>
@@ -40,7 +49,7 @@
             </div>
         </div>
         <div class="card" data-food="アリエルのアイス">
-            <img src="ariel_ice.jpg" alt="アリエルのアイス">
+            <img src="image/food/ab.jpeg" alt="アリエルのアイス">
             <div class="card-content">
                 <h3>アリエルのアイス</h3>
                 <p>海底の氷を使った、幻想的なブルーカラーのアイスクリーム。</p>
