--- a/movie.html
+++ b/movie.html
@@ -78,7 +78,7 @@
 
     <div id="like " class="like">
         <div class="about ">
-            <h2>あああ</h2>
+            <h2 class="movie-h2">あああ</h2>
             <div class="swiper swiper1">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -119,6 +119,7 @@
 
     <div id="like " class="like">
         <div class="about ">
+            <h2 class="movie-h2">あああ</h2>
             <div class="swiper swiper1">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -159,6 +160,7 @@
 
     <div id="like " class="like">
         <div class="about ">
+            <h2 class="movie-h2">あああ</h2>
             <div class="swiper swiper1">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
