--- a/soccer.html
+++ b/soccer.html
@@ -3,71 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>映画サブスク風スライダー</title>
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <style>
-        /* 任意の追加のCSSスタイルをここに追加できます */
-        .swiper-slide {
-            text-align: center;
-            font-size: 18px;
-            background: #fff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .swiper-container {
-            width: 80%; /* コンテナの幅を調整 */
-            margin: 0 auto; /* 中央寄せ */
-        }
-    </style>
+    <title>チェルシーFC - World's Greatest Football Club</title>
+    <link rel="stylesheet" href="css/soccer.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-qpQfjy7fR8+7VTsw0gOLYwAGqjjT4UfGV8q4zIYYZcXXbQvIaxwbT4fgWt5x7dUAsNRBjWcszndPluM7Lw8twQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <header>
+        <div class="header-container">
+            <h1>チェルシーFC</h1>
+            <nav>
+                <ul>
+                    <li><a href="#team-info">チームの概要</a></li>
+                    <li><a href="#stadium-info">ホームスタジアム</a></li>
+                    <li><a href="#titles-info">主なタイトル</a></li>
+                    <li><a href="#latest-news">最新ニュース</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section id="hero">
+            <div class="hero-content">
+                <h2>チェルシーFC - World's Greatest Football Club</h2>
+                <p>Experience the glory and passion of Chelsea Football Club.</p>
+                <a href="#team-info" class="btn">詳細を見る</a>
+            </div>
+        </section>
+        <section id="team-info">
+            <div class="section-content">
+                <h2>チームの概要</h2>
+                <p>チェルシーFC（Chelsea Football Club）は、イングランド・ロンドンを本拠地とするプロサッカークラブです。1905年に創設され、プレミアリーグで活躍する名門クラブの一つです。</p>
+                <img src="images/team.jpg" alt="チームの画像">
+            </div>
+        </section>
+        <section id="stadium-info">
+            <div class="section-content">
+                <h2>ホームスタジアム</h2>
+                <p>チェルシーFCのホームスタジアムは、スタンフォード・ブリッジ（Stamford Bridge）です。このスタジアムはロンドン西部のフラム区に位置し、キャパシティは約4万人です。</p>
+                <img src="images/stadium.jpg" alt="スタジアムの画像">
+            </div>
+        </section>
+        <section id="titles-info">
+            <div class="section-content">
+                <h2>主なタイトル</h2>
+                <ul id="titles-list">
+                    <!-- JavaScriptで動的に生成 -->
+                </ul>
+            </div>
+        </section>
+        <section id="latest-news">
+            <div class="section-content">
+                <h2>最新ニュース</h2>
+                <div id="news-container">
+                    <!-- JavaScriptで動的にニュースを追加 -->
+                </div>
+            </div>
+        </section>
+    </main>
 
-<div class="swiper-container">
-    <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="movie1.jpg" alt="Movie 1"></div>
-        <div class="swiper-slide"><img src="movie2.jpg" alt="Movie 2"></div>
-        <div class="swiper-slide"><img src="movie3.jpg" alt="Movie 3"></div>
-        <div class="swiper-slide"><img src="movie4.jpg" alt="Movie 4"></div>
-        <div class="swiper-slide"><img src="movie5.jpg" alt="Movie 5"></div>
-        <div class="swiper-slide"><img src="movie6.jpg" alt="Movie 6"></div>
-        <div class="swiper-slide"><img src="movie7.jpg" alt="Movie 7"></div>
-        <div class="swiper-slide"><img src="movie8.jpg" alt="Movie 8"></div>
-        <div class="swiper-slide"><img src="movie9.jpg" alt="Movie 9"></div>
-    </div>
-    <!-- ページネーション -->
-    <div class="swiper-pagination"></div>
-    <!-- ナビゲーションボタン -->
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
-</div>
+    <footer>
+        <p>&copy; 2024 チェルシーFC. All Rights Reserved.</p>
+    </footer>
 
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-<script>
-    var swiper = new Swiper('.swiper-container', {
-        slidesPerView: 4,
-        spaceBetween: 20,
-        loop: true,
-        navigation: {
-            nextEl: '.swiper-button-next',
-            prevEl: '.swiper-button-prev',
-        },
-        pagination: {
-            el: '.swiper-pagination',
-            clickable: true,
-        },
-        breakpoints: {
-            768: {
-                slidesPerView: 2,
-                spaceBetween: 20,
-            },
-            1024: {
-                slidesPerView: 3,
-                spaceBetween: 20,
-            },
-        }
-    });
-</script>
-
+    <script src="js/soccer.js"></script>
 </body>
 </html>
