青枠ついか

--- a/artist.html
+++ b/artist.html
@@ -1401,11 +1401,15 @@
 
 
     <footer class="footer">
+        <div class="footer-div">
+            <p class="footer-p">666</p>
         <ul class="footer-ul">
             <li><a href=""><img class="insta-img" src="image/image/insta.png" alt=""></a></li>
             <li><a href=""><img class="line-img" src="image/image/insta.png" alt=""></a></li>
             <li><a href=""><img class="x-img" src="image/image/insta.png" alt=""></a></li>
         </ul>
+        </div>
+        
     </footer>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 <script src="js/scripts.js"></script>
