--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
             <div class="swiper-slide"><img src="image/hood/sun.jpg" alt=""></div>
           </div>
           <div class="swiper-pagination swiper2-pagination"></div>
-          <div class="swiper-button-next swiper2-button-next"></div>
-          <div class="swiper-button-prev swiper2-button-prev"></div>
+        
         </div>
         <a href=""><p>Detail</p></a>
       </div>
@@ -104,7 +103,7 @@
     </div>
 
 
-    <div id="sns" class="about about-line">
+    <div id="sns" class=" sns about about-line">
         <h2 class="sns-h2">SNS</h2>
         <div class="index-sns-imgs ">  
             <div class="index-sns-imgs-row">
@@ -121,7 +120,7 @@
     </div>
 
 
-    <div id="q&a" class="">
+    <div id="q&a" class="qa">
         <h2 class="about-h2">Q&A</h2>
         <div class="about-div">
             <form class="qa-form">      
