--- a/soccer.html
+++ b/soccer.html
@@ -8,19 +8,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-qpQfjy7fR8+7VTsw0gOLYwAGqjjT4UfGV8q4zIYYZcXXbQvIaxwbT4fgWt5x7dUAsNRBjWcszndPluM7Lw8twQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <header>
-        <div class="header-container">
-            <h1>チェルシーFC</h1>
-            <nav>
-                <ul>
-                    <li><a href="#team-info">チームの概要</a></li>
-                    <li><a href="#stadium-info">ホームスタジアム</a></li>
-                    <li><a href="#titles-info">主なタイトル</a></li>
-                    <li><a href="#latest-news">最新ニュース</a></li>
+    <div class="sub-cover cover-contact">
+        <header class="page-header">
+            <nav class="main-nav">
+                <ul class="head-main-nav">
+                    <h1 class="nav-h1"><a href="index.html"><img class="nav-img" src="image/image/pngwing.comのコピー.png" alt=""></a></h1>
+                    <li class="nav-li"><a style="text-decoration: none;" href="#like">my favorite</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="hood.html">myhood</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="qa.html">q&a</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="sns.html">sns</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="aaaa.html">career</a></li>
                 </ul>
             </nav>
-        </div>
-    </header>
+        </header>
+    </div>
     <main>
         <section id="hero">
             <div class="hero-content">
@@ -33,14 +34,14 @@
             <div class="section-content">
                 <h2>チームの概要</h2>
                 <p>チェルシーFC（Chelsea Football Club）は、イングランド・ロンドンを本拠地とするプロサッカークラブです。1905年に創設され、プレミアリーグで活躍する名門クラブの一つです。</p>
-                <img src="images/team.jpg" alt="チームの画像">
+                <img src="image/soccer/che.jpg" alt="チームの画像">
             </div>
         </section>
         <section id="stadium-info">
             <div class="section-content">
                 <h2>ホームスタジアム</h2>
                 <p>チェルシーFCのホームスタジアムは、スタンフォード・ブリッジ（Stamford Bridge）です。このスタジアムはロンドン西部のフラム区に位置し、キャパシティは約4万人です。</p>
-                <img src="images/stadium.jpg" alt="スタジアムの画像">
+                <img src="image/soccer/flag.jpg" alt="スタジアムの画像">
             </div>
         </section>
         <section id="titles-info">
@@ -61,8 +62,15 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 チェルシーFC. All Rights Reserved.</p>
+
+    <footer class="footer">
+        <div class="footer-div">
+            <p class="footer-p">666</p>
+        <ul class="footer-ul">
+            <p>&copy; 2024 チェルシーFC. All Rights Reserved.</p>
+        </ul>
+        </div>
+        
     </footer>
 
     <script src="js/soccer.js"></script>
