--- a/food.html
+++ b/food.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>宇宙の魔法の料理</title>
     <link rel="stylesheet" href="css/food.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-WIe1FSYOeE/22RPP6VZEZ41B4B9vN8LeHU/9L6Qr2wPfO1x9+dG/v2rc52ex5SPmSKsSCGj4nBYOQXjGKj4R4Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="main-hobby">
@@ -24,19 +25,19 @@
         </header>
     </div>
     <div class="container">
-        <div class="card" data-food="星雲のスープ">
-            <img src="image/food/ab.jpeg" alt="星雲のスープ">
+        <div class="card" data-food="アリエルのアイス">
+            <img src="image/food/ab.jpeg" alt="アリエルのアイス">
             <div class="card-content">
-                <h3>星雲のスープ</h3>
-                <p>彩り鮮やかな星雲をイメージした、宇宙的なスープ。</p>
+                <h3>アリエルのアイス</h3>
+                <p>海底の氷を使った、幻想的なブルーカラーのアイスクリーム。</p>
                 <button class="btn-details">詳細を見る</button>
             </div>
         </div>
-        <div class="card" data-food="アストロベリーパフェ">
-            <img src="image/food/hb.jpeg" alt="アストロベリーパフェ">
+        <div class="card" data-food="アリエルのアイス">
+            <img src="image/food/ab.jpeg" alt="アリエルのアイス">
             <div class="card-content">
-                <h3>アストロベリーパフェ</h3>
-                <p>宇宙の果実、アストロベリーをふんだんに使った宇宙船の形をしたパフェ。</p>
+                <h3>アリエルのアイス</h3>
+                <p>海底の氷を使った、幻想的なブルーカラーのアイスクリーム。</p>
                 <button class="btn-details">詳細を見る</button>
             </div>
         </div>
@@ -72,6 +73,16 @@
             </div>
         </div>
     </div>
+
+    <footer class="footer">
+        <div class="footer-div">
+            <p class="footer-p"></p>
+        <ul class="footer-ul">
+            <p>&copy; 2024 チェルシーFC. All Rights Reserved.</p>
+        </ul>
+        </div>
+        
+    </footer>
 
     <script src="js/food.js"></script>
 </body>
