--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/test.css">
     <link rel="stylesheet" href="css/qa.css">
     <link rel="stylesheet" href="css/test2.css">
+    <link rel="stylesheet" href="css/footer.css">
     
 </head>
 <body class="main-hobby">
