--- a/skatborde.html
+++ b/skatborde.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css">
         <link rel="stylesheet" href="css/sk.css">
         <link rel="stylesheet" href="css/indexjs.css">
+        <link rel="stylesheet" href="css/footer.css">
 
     </head>
 
@@ -114,11 +115,6 @@
             <footer class="footer">
                 <div class="footer-div">
                     <p class="footer-p">666</p>
-                <ul class="footer-ul">
-                    <li><a href=""><img class="insta-img" src="image/image/insta.png" alt=""></a></li>
-                    <li><a href=""><img class="line-img" src="image/image/insta.png" alt=""></a></li>
-                    <li><a href=""><img class="x-img" src="image/image/insta.png" alt=""></a></li>
-                </ul>
                 </div>
                 
             </footer>
