--- a/soccer.html
+++ b/soccer.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>チェルシーFC - World's Greatest Football Club</title>
     <link rel="stylesheet" href="css/soccer.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-qpQfjy7fR8+7VTsw0gOLYwAGqjjT4UfGV8q4zIYYZcXXbQvIaxwbT4fgWt5x7dUAsNRBjWcszndPluM7Lw8twQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -25,7 +26,7 @@
     <main>
         <section id="hero">
             <div class="hero-content">
-                <h2>チェルシーFC - World's Greatest Football Club</h2>
+                <h2>チェルシーFC -  Football Club</h2>
                 <p>Experience the glory and passion of Chelsea Football Club.</p>
                 <a href="#team-info" class="btn">詳細を見る</a>
             </div>
@@ -34,14 +35,15 @@
             <div class="section-content">
                 <h2>チームの概要</h2>
                 <p>チェルシーFC（Chelsea Football Club）は、イングランド・ロンドンを本拠地とするプロサッカークラブです。1905年に創設され、プレミアリーグで活躍する名門クラブの一つです。</p>
-                <img src="image/soccer/che.jpg" alt="チームの画像">
+                <div class="imgs"><img class="soccer-img" src="image/soccer/che.jpg" alt="チームの画像"></div>
             </div>
         </section>
         <section id="stadium-info">
             <div class="section-content">
                 <h2>ホームスタジアム</h2>
                 <p>チェルシーFCのホームスタジアムは、スタンフォード・ブリッジ（Stamford Bridge）です。このスタジアムはロンドン西部のフラム区に位置し、キャパシティは約4万人です。</p>
-                <img src="image/soccer/flag.jpg" alt="スタジアムの画像">
+                <div class="imgs"><img class="soccer-img" src="image/soccer/flag.jpg" alt="スタジアムの画像"></div>
+                
             </div>
         </section>
         <section id="titles-info">
