--- a/food.html
+++ b/food.html
@@ -74,14 +74,13 @@
         </div>
     </div>
 
+    
     <footer class="footer">
         <div class="footer-div">
-            <p class="footer-p"></p>
         <ul class="footer-ul">
-            <p>&copy; 2024 チェルシーFC. All Rights Reserved.</p>
+            <p class="footer-p">&copy; Yusuke Tamura self introduction</p>
         </ul>
         </div>
-        
     </footer>
 
     <script src="js/food.js"></script>
