--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                     <h1 class="nav-h1"><a href="index.html"><img class="nav-img" src="image/image/pngwing.comのコピー.png" alt=""></a></h1>
                     <li class="nav-li"><a style="text-decoration: none;" href="#like">my favorite</a></li>
                     <li class="nav-li"><a style="text-decoration: none;"  href="#hood">myhood</a></li>
-                    <li class="nav-li"><a style="text-decoration: none;"  href="#q&a">q&a</a></li>
-                    <li class="nav-li"><a style="text-decoration: none;"  href="#sns">sns</a></li>
                     <li class="nav-li"><a style="text-decoration: none;"  href="#career">career</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="#sns">sns</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="#q&a">q&a</a></li>
                 </ul>
             </nav>
             <p class="eachTextAnime">
@@ -41,7 +41,7 @@
         </header>
     </div>
 
-    <div id="like " class="like">
+    <div id="like" class="like">
         <div class="about about-line">
             <h2 class="myf">My Favorite Things</h2>
             <div class="swiper swiper1">
@@ -154,14 +154,13 @@
 
 
 
+   
     <footer class="footer">
         <div class="footer-div">
-            <p class="footer-p"></p>
         <ul class="footer-ul">
-            <p>&copy; 2024 チェルシーFC. All Rights Reserved.</p>
+            <p class="footer-p">&copy; Yusuke Tamura self introduction</p>
         </ul>
         </div>
-        
     </footer>
   
    
