--- a/soccer.html
+++ b/soccer.html
@@ -67,12 +67,10 @@
 
     <footer class="footer">
         <div class="footer-div">
-            <p class="footer-p">666</p>
         <ul class="footer-ul">
-            <p>&copy; 2024 チェルシーFC. All Rights Reserved.</p>
+            <p class="footer-p">&copy; Yusuke Tamura self introduction</p>
         </ul>
         </div>
-        
     </footer>
 
     <script src="js/soccer.js"></script>
