--- a/skatborde.html
+++ b/skatborde.html
@@ -111,12 +111,12 @@
                 </div>
             </div>
 
-
             <footer class="footer">
                 <div class="footer-div">
-                    <p class="footer-p">666</p>
+                <ul class="footer-ul">
+                    <p class="footer-p">&copy; Yusuke Tamura self introduction</p>
+                </ul>
                 </div>
-                
             </footer>
             
             <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
