--- a/movie.html
+++ b/movie.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="open-modal" data-img-src="image/mm/top.PNG" data-img-alt="トップボーイ">
-                            <img class="imgone" src="image/mm/top.PNG" alt="">
+                            <img class="imgone" src="image/mm/ab.PNG" alt="">
                         </a>
                         <h2 class="movie-name">トップボーイ</h2>
                         <p class="movie-di"><br>イギリスのギャングロードマンの話</p>
